refactor: use StringUtils for input validation and trimming in ProducerImportService